[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhycom"
version = "1.0"
description = "Python utilities for working with HYCOM data"
authors = [{ name = "Brandon Kerns" }]
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["pyhycom"]

# Python dependencies
dependencies = [
    "numpy",
    "netCDF4",
]
